# c3

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pixi.toml  pyproject.toml
implement/: plan.md  state.json
recipe/: recipe.yaml
specs/001-cli-claude-code/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cli-claude-code/contracts/: cli-interface.md  data-schemas.json
src/: __init__.py  main.py
src/cli/: __init__.py  apply_command.py  config_command.py  install_command.py  list_command.py  status_command.py  sync_command.py
src/lib/: __init__.py  command_base.py  dotfiles.py  git_ops.py  render.py  templates.py
src/models/: __init__.py  cli_config.py  config_data.py  config_loader.py  config_paths.py  config_repository.py  config_validator.py  dotfile_link.py  enums.py  project_file.py  template.py
tests/: __init__.py  fixtures.py
tests/contract/: test_cli_apply.py  test_cli_config.py  test_cli_install.py  test_cli_list.py  test_cli_status.py  test_cli_sync.py
tests/integration/: test_cli_real_functionality.py  test_filesystem_operations.py  test_git_operations.py
